--- a/Astralbrew.Celesta.csproj
+++ b/Astralbrew.Celesta.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6084442D-7DA6-4408-958E-8A7D775E3F87}</ProjectGuid>
+    <ProjectGuid>{87E42B5C-5EBF-4D93-AD9E-A4E42CC63D71}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Astralbrew.Celesta</RootNamespace>
@@ -44,36 +44,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Script\CodePieceBuilder.cs" />
-    <Compile Include="Script\CodePieces\BinaryExpression.cs" />
-    <Compile Include="Script\CodePieces\CodeBlock.cs" />
-    <Compile Include="Script\CodePieces\Conditional.cs" />
-    <Compile Include="Script\CodePieces\ConstantValue.cs" />
-    <Compile Include="Script\CodePieces\DataType.cs" />
-    <Compile Include="Script\CodePieces\Function.cs" />
-    <Compile Include="Script\CodePieces\ICodePiece.cs" />
-    <Compile Include="Script\CodePieces\Nop.cs" />
-    <Compile Include="Script\CodePieces\UnaryExpression.cs" />
-    <Compile Include="Script\CodePieces\Variable.cs" />
-    <Compile Include="Script\Compile\CompileTimeContext.cs" />
-    <Compile Include="Script\Compile\CompileTimeFunction.cs" />
-    <Compile Include="Script\Compile\CompileTimeType.cs" />
-    <Compile Include="Script\InterpretedEntities\DecimalToken.cs" />
-    <Compile Include="Script\InterpretedEntities\IInterpretedToken.cs" />
-    <Compile Include="Script\InterpretedEntities\IntegerToken.cs" />
-    <Compile Include="Script\InterpretedEntities\InterpretedToken.cs" />
-    <Compile Include="Script\InterpretedEntities\InterpretedTokenType.cs" />
-    <Compile Include="Script\InterpretedEntities\ConstantToken.cs" />
-    <Compile Include="Script\InterpretedEntities\KeywordToken.cs" />
-    <Compile Include="Script\InterpretedEntities\LiteralToken.cs" />
-    <Compile Include="Script\InterpretedEntities\OperatorToken.cs" />
-    <Compile Include="Script\InterpretedEntities\StringToken.cs" />
-    <Compile Include="Script\CelestaInterpreter.cs" />
+    <Compile Include="Compiler\AST\BlockNode.cs" />
+    <Compile Include="Compiler\AST\AbstractNode.cs" />
+    <Compile Include="Compiler\AST\AssignNode.cs" />
+    <Compile Include="Compiler\AST\ConditionalNode.cs" />
+    <Compile Include="Compiler\AST\ConstantIdentificationException.cs" />
+    <Compile Include="Compiler\AST\ConstantNode.cs" />
+    <Compile Include="Compiler\AST\DataTypeNode.cs" />
+    <Compile Include="Compiler\AST\FunctionNode.cs" />
+    <Compile Include="Compiler\AST\IBlockNode.cs" />
+    <Compile Include="Compiler\AST\ISyntaxTreeNode.cs" />
+    <Compile Include="Compiler\AST\LoopNode.cs" />
+    <Compile Include="Compiler\AST\OperatorNode.cs" />
+    <Compile Include="Compiler\AST\SyntaxTree.cs" />
+    <Compile Include="Compiler\AST\SyntaxTreeNodeType.cs" />
+    <Compile Include="Compiler\AST\VariableNode.cs" />
+    <Compile Include="Compiler\DefinitionContext.cs" />
+    <Compile Include="Compiler\DuplicateDefinitionException.cs" />
+    <Compile Include="Compiler\IdenitifierNotFoundException.cs" />
+    <Compile Include="Compiler\ParseException.cs" />
+    <Compile Include="Compiler\Parser.cs" />
+    <Compile Include="Compiler\ParseTreeNode.cs" />
+    <Compile Include="Compiler\SymbolSolver.cs" />
+    <Compile Include="Constants\LanguageDefinition.cs" />
+    <Compile Include="Data\SymbolDefinitions\AbstractSymbolDefinition.cs" />
+    <Compile Include="Data\SymbolDefinitions\DataTypeDefinition.cs" />
+    <Compile Include="Data\SymbolDefinitions\FunctionDefinition.cs" />
+    <Compile Include="Data\SymbolDefinitions\ISymbolDefinition.cs" />
+    <Compile Include="Data\SymbolDefinitions\OperatorDefinition.cs" />
+    <Compile Include="Data\SymbolDefinitions\UnknownSymbolDefinition.cs" />
+    <Compile Include="Data\SymbolDefinitions\VariableDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Script\InterpreterContext.cs" />
-    <Compile Include="Script\Parser.cs" />
-    <Compile Include="Script\PrecedenceType.cs" />
-    <Compile Include="Types\SignedFixed24.cs" />
+    <Compile Include="Runtime\Interpreter.cs" />
+    <Compile Include="Utils\ArraySequenceEqualityComparer.cs" />
+    <Compile Include="Utils\StringUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
