--- a/Astralbrew.Celesta.csproj
+++ b/Astralbrew.Celesta.csproj
@@ -75,9 +75,13 @@
     <Compile Include="Data\SymbolDefinitions\UnknownSymbolDefinition.cs" />
     <Compile Include="Data\SymbolDefinitions\VariableDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runtime\Implementation\Operators\BinaryOperator.cs" />
+    <Compile Include="Runtime\ImplementationsCollection.cs" />
+    <Compile Include="Runtime\Implementation\BinaryOperator.cs" />
+    <Compile Include="Runtime\Implementation\FunctionImplementation.cs" />
     <Compile Include="Runtime\Interpreter.cs" />
     <Compile Include="Runtime\IRuntimeImplementation.cs" />
+    <Compile Include="Runtime\Module.cs" />
+    <Compile Include="Runtime\Modules\MathModule.cs" />
     <Compile Include="Runtime\RuntimeContext.cs" />
     <Compile Include="Utils\ArraySequenceEqualityComparer.cs" />
     <Compile Include="Utils\StringUtils.cs" />
