--- a/Astralbrew.Celesta.csproj
+++ b/Astralbrew.Celesta.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Compiler\DefinitionContext.cs" />
     <Compile Include="Compiler\DuplicateDefinitionException.cs" />
     <Compile Include="Compiler\IdenitifierNotFoundException.cs" />
+    <Compile Include="Compiler\OperatorsRuleBuilder.cs" />
     <Compile Include="Compiler\ParseException.cs" />
     <Compile Include="Compiler\Parser.cs" />
     <Compile Include="Compiler\ParseTreeNode.cs" />
@@ -76,7 +77,6 @@
     <Compile Include="Data\SymbolDefinitions\VariableDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\ImplementationsCollection.cs" />
-    <Compile Include="Runtime\Implementation\BinaryOperator.cs" />
     <Compile Include="Runtime\Implementation\FunctionImplementation.cs" />
     <Compile Include="Runtime\Interpreter.cs" />
     <Compile Include="Runtime\IRuntimeImplementation.cs" />
